added fonts, renamed icons to resolve conflict of classes names, created global styles

--- a/app/design/frontend/Project/Default/web/css/source/_extend.less
+++ b/app/design/frontend/Project/Default/web/css/source/_extend.less
@@ -1,5 +1,16 @@
+//Sprite icons
+
 @import '_sprite.less';
 .icon {
   display: inline-block;
 }
 .sprites(@spritesheet-sprites);
+
+//Fonts
+
+@import '_typography.less';
+
+//Global styles
+
+@import '_global.less';
+
