added fonts into project, modified wysiwyg editor fonts

--- a/app/design/frontend/Project/Default/web/css/source/_global.less
+++ b/app/design/frontend/Project/Default/web/css/source/_global.less
@@ -20,7 +20,20 @@
 @pj-border-light-bg: #c2c2c2;
 @pj-border-dark-bg: #636262;
 
+//Classes-helpers
+
+._no-margin {
+  p {
+    margin: 0;
+  }
+}
+._hide-element {
+  display: none;
+}
+
 
 body {
-  font-size: 1.6rem;
+  font: 1.6rem/1.2 'Montag', sans-serif;
+  direction: rtl;
 }
+
