--- a/app/design/frontend/Project/Default/web/css/source/_global.less
+++ b/app/design/frontend/Project/Default/web/css/source/_global.less
@@ -19,6 +19,9 @@
 @pj-radio-btn-bg: #fc4a9e;
 @pj-border-light-bg: #c2c2c2;
 @pj-border-dark-bg: #636262;
+@pj-close-btn-color: #9c9c9c;
+@pj-search-border-color: #ececec;
+
 
 //Classes-helpers
 
@@ -30,10 +33,12 @@
 ._hide-element {
   display: none;
 }
-
+._show-element {
+  display: block;
+}
 
 body {
-  font: 1.6rem/1.2 'Montag', sans-serif;
+  font: 1.6rem/1.2 'Spacer', sans-serif;
   direction: rtl;
 }
 
