header fixes: added comments to less files, refractored code, data-mage-init instead inline js, pixel perfect fixes, data-atributes instead classes with js prefix, translations, path instead href in links

--- a/app/design/frontend/Project/Default/Magento_Search/templates/search_button.phtml
+++ b/app/design/frontend/Project/Default/Magento_Search/templates/search_button.phtml
@@ -5,7 +5,8 @@
 ?>
 
 <div class="search-toggle">
-    <button class="search-toggle-btn" data-mage-init='{
-        "Magento_Search/js/search-toggle": {}
-    }'>search</button>
+    <button class="search-toggle-btn"
+            data-mage-init='{
+                "Magento_Search/js/search-toggle": {}
+            }'><?php echo $block->escapeHtml(__('Search')) ?></button>
 </div>
