--- a/app/design/frontend/Project/Default/Magento_Checkout/web/css/source/_extend.less
+++ b/app/design/frontend/Project/Default/Magento_Checkout/web/css/source/_extend.less
@@ -1,3 +1,7 @@
+//
+//  Common
+//  _____________________________________________
+
 & when (@media-common = true) {
     .minicart-wrapper {
         .action.showcart:before {
@@ -5,11 +9,21 @@
         }
     }
 }
+
+//
+//  Mobile
+//  _____________________________________________
+
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
     .minicart-wrapper {
         .sprite(@cart-icon-mobile);
     }
 }
+
+//
+//  Desktop
+//  _____________________________________________
+
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
     .minicart-wrapper {
         .sprite(@cart-icon);
