--- a/app/design/frontend/Project/Default/Magento_Theme/templates/html/header/header-sticky.phtml
+++ b/app/design/frontend/Project/Default/Magento_Theme/templates/html/header/header-sticky.phtml
@@ -1,12 +1,4 @@
-<script>
-    require(['jquery'], function ($) {
-        var $header = $(".js-header-sticky");
-        $(window).scroll(function(){
-            if($(window).scrollTop() > 50){
-                $header.addClass("header-sticky");
-            } else {
-                $header.removeClass("header-sticky");
-            }
-        });
-    });
-</script>
+<div class="header-main"
+     data-mage-init='{"js/header-sticky": {}}'>
+    <?php echo $block->getChildHtml() ?>
+</div>
