--- a/app/design/frontend/Project/Default/web/css/source/extend/_header.less
+++ b/app/design/frontend/Project/Default/web/css/source/extend/_header.less
@@ -1,44 +1,51 @@
-@import './header/_top-line.less';
-@import './header/_top-links.less';
-@import './header/_logo.less';
-@import './header/_top-nav.less';
-@import './header/_header-sticky.less';
+//
+//  Common
+//  _____________________________________________
 
 & when (@media-common = true) {
     .header-main {
         display: grid;
         grid-gap: 0 5px;
     }
+
     .page-header {
-        grid-row: 4;
-        grid-column: 1 / span 2;
         margin-bottom: 0;
         border-bottom: none;
     }
 
-    //Columns
+    //
+    //  Columns
+    //  ---------------------------------------------
 
     .header-left-col,
     .header-center-col,
     .header-right-col {
         display: flex;
-        align-items: center;
     }
+
     .header-left-col {
         justify-content: flex-end;
     }
 }
+
+//
+//  Mobile
+//  _____________________________________________
+
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
     .header-main {
-        grid-template-columns: repeat(auto-fill, 50%);
-        padding: 0 0 10px 0;
+        padding: 0 0 10px;
         border-bottom: 1px solid @pj-border-light-bg;
     }
+
     .page-header {
+        grid-row: 4;
         grid-column: 1 / span 2;
     }
 
-    //Columns
+    //
+    //  Columns
+    //  ---------------------------------------------
 
     .header-left-col {
         padding-left: 15px;
@@ -47,10 +54,12 @@
             margin: 0 8px;
         }
     }
+
     .header-center-col {
         order: 2;
         grid-column: 1 / span 2;
     }
+
     .header-right-col {
         order: 3;
         align-items: center;
@@ -62,7 +71,9 @@
         }
     }
 
-    //Burger menu
+    //
+    //  Burger-menu
+    //  ---------------------------------------------
 
     .nav-toggle {
         position: static;
@@ -72,55 +83,77 @@
         }
     }
 }
+
+//
+//  Desktop
+//  _____________________________________________
+
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
     .header-main {
-        grid-template-columns: 1fr 1fr 1fr;
         padding: 0;
     }
+
     .page-header {
-        order: 5;
         grid-column: 1 / span 3;
+        grid-row: 4;
     }
 
-    //Columns
+    //
+    //  Columns
+    //  ---------------------------------------------
 
     .header-left-col,
     .header-center-col,
     .header-right-col {
-        grid-row: 2;
+        align-items: center;
     }
+
     .header-left-col {
         order: 4;
         padding-left: 0;
         > * {
             margin: 5px 15px 0 10px;
+            min-width: 26px;
+
         }
     }
+
     .header-center-col {
         order: 3;
     }
+
     .header-right-col {
-        order: 2;
         flex-direction: row-reverse;
         justify-content: flex-end;
     }
-    .header.panel > .header.links > li a {
-        font-size: 1.4rem;
-    }
+
     .nav-sections {
-        order: 6;
         grid-row: 5;
     }
 }
+
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__xl) {
     .header-main {
         width: 1500px;
+        grid-template-columns: 1fr 1fr 1fr;
         max-width: 100%;
         margin: auto;
     }
+
+    //
+    //  Columns
+    //  ---------------------------------------------
+
     .header-left-col {
         > * {
             margin: 5px 20px 0 12px;
         }
     }
 }
+
+@import './header/_top-line.less';
+@import './header/_top-links.less';
+@import './header/_logo.less';
+@import './header/_top-nav.less';
+@import './header/_header-sticky.less';
+
