--- a/app/design/frontend/Project/Default/web/css/source/extend/header/_top-line.less
+++ b/app/design/frontend/Project/Default/web/css/source/extend/header/_top-line.less
@@ -1,23 +1,36 @@
+//
+//  Common
+//  _____________________________________________
+
 & when (@media-common = true) {
     .header-top-line {
         position: relative;
-        padding: 2px 10px 6px 10px;
+        padding: 2px 10px 6px;
         font-size: 1.6rem;
         letter-spacing: -.5px;
         font-weight: bold;
         line-height: 1.4;
         text-align: center;
         background-color: @pg-grey50-color;
-        p:last-of-type {
-            font-size: smaller;
+        p {
+            margin: 0;
+            &:last-of-type {
+                font-size: smaller;
+            }
         }
     }
+
+    .header-top-line.hide {
+        display: none;
+    }
+
     .header-top-close {
         position: absolute;
         top: 3px;
         right: 3px;
         height: 10px;
         width: 10px;
+        cursor: pointer;
         &:before,
         &:after {
             content: '';
@@ -34,9 +47,15 @@
         }
     }
 }
+
+//
+//  Desktop
+//  _____________________________________________
+
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
     .header-top-line {
-        padding: 13px 10px;
+        padding: 10px;
+        font-size: 1.8rem;
         p {
             display: inline-block;
         }
