added footer cards

--- a/app/design/frontend/Project/Default/Magento_Search/web/css/source/_extend.less
+++ b/app/design/frontend/Project/Default/Magento_Search/web/css/source/_extend.less
@@ -26,7 +26,7 @@
             height: 2px;
             width: 20px;
             position: absolute;
-            background-color: @pj-close-btn-color;
+            background-color: @pg-close-btn-color;
         }
         &:before {
             transform: translate(9px, 6px) rotate(45deg);
@@ -52,7 +52,7 @@
             font-size: 1.6rem;
             outline: none;
             border: none;
-            border-bottom: 2px solid @pj-search-border-color;
+            border-bottom: 2px solid @pg-search-border-color;
             &:focus {
                 outline: none;
             }
