--- a/app/design/frontend/Project/Default/web/css/source/_variables.less
+++ b/app/design/frontend/Project/Default/web/css/source/_variables.less
@@ -40,7 +40,7 @@
 //  Main Colors
 //  ---------------------------------------------
 
-@pg-attention-color: #ff0000;
+@pg-accent-color: #ff0000;
 @pg-dark-color: #1a1a1a;
 @pg-grey10-color: #404040;
 @pg-grey20-color: #636262;
@@ -54,12 +54,19 @@
 //  Additional colors
 //  ---------------------------------------------
 
-@pj-successful-color: #55b047;
-@pj-label-new-bg: #3cb878;
-@pj-facebook-bg: #5b77b4;
-@pj-facebook-bg-hover: #7c92c3;
-@pj-radio-btn-bg: #fc4a9e;
-@pj-border-light-bg: #c2c2c2;
-@pj-border-dark-bg: #636262;
-@pj-close-btn-color: #9c9c9c;
-@pj-search-border-color: #ececec;
+@pg-successful-color: #55b047;
+@pg-label-new-bg: #3cb878;
+@pg-facebook-bg: #5b77b4;
+@pg-facebook-bg-hover: #7c92c3;
+@pg-radio-btn-bg: #fc4a9e;
+@pg-border-light-bg: #c2c2c2;
+@pg-border-dark-bg: #636262;
+@pg-close-btn-color: #9c9c9c;
+@pg-search-border-color: #ececec;
+
+//
+//  Fonts
+//  ---------------------------------------------
+
+@pg-base-font-name: 'Spacer', sans-serif;
+@pg-additional-font-name: 'Montag', sans-serif;
