--- a/app/design/frontend/Project/Default/web/css/source/extend/_header.less
+++ b/app/design/frontend/Project/Default/web/css/source/extend/_header.less
@@ -35,7 +35,7 @@
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
     .header-main {
         padding: 0 0 10px;
-        border-bottom: 1px solid @pj-border-light-bg;
+        border-bottom: 1px solid @pg-border-light-bg;
     }
 
     .page-header {
