--- a/app/design/frontend/Project/Default/web/css/source/extend/header/_top-links.less
+++ b/app/design/frontend/Project/Default/web/css/source/extend/header/_top-links.less
@@ -37,7 +37,7 @@
             border-radius: 50%;
             font-size: 1.2rem;
             font-weight: bold;
-            background-color: @pg-attention-color;
+            background-color: @pg-accent-color;
         }
     }
 }
