--- a/app/design/frontend/Project/Default/web/css/source/extend/header/_top-nav.less
+++ b/app/design/frontend/Project/Default/web/css/source/extend/header/_top-nav.less
@@ -16,7 +16,7 @@
         background: none;
 
         .level0.active > .level-top {
-            color: @pg-attention-color;
+            color: @pg-accent-color;
             border-color: transparent;
         }
 
@@ -26,7 +26,7 @@
             font-weight: bold;
             &:hover {
                 span {
-                    color: @pg-attention-color;
+                    color: @pg-accent-color;
                     transition: .3s;
                 }
             }
