completed footer, fixed header sticky

--- a/app/design/frontend/Project/Default/web/css/source/_global.less
+++ b/app/design/frontend/Project/Default/web/css/source/_global.less
@@ -137,7 +137,7 @@
     input[type="checkbox"] + label:before {
       content: '';
       position: absolute;
-      top: 0;
+      top: -2px;
       right: 0;
       border: 1px solid @pg-grey30-color;
     }
@@ -171,7 +171,7 @@
   }
   h6,
   .h6 {
-    font: 2rem/1.2 @pg-base-font-name;
+    font: 1.6rem/1.2 @pg-base-font-name;
   }
 
   input[type="checkbox"] + label:before {
