--- a/app/design/frontend/Project/Default/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Project/Default/Magento_Theme/layout/default.xml
@@ -18,6 +18,8 @@
         <move element="navigation.sections" destination="header-nav"/>
         <move element="header.container" destination="header-nav"/>
         <move element="form.subscribe" destination="pj-footer-cards" before="footer-brand"/>
+        <move element="copyright-wrapper" destination="page.wrapper" after="-"/>
+        <move element="copyright" destination="footer-bottom-line" as="copyright"/>
 
         <referenceBlock name="logo">
             <arguments>
@@ -57,6 +59,15 @@
                 <container htmlTag="div" htmlClass="header-center-col" name="header-center-col"/>
                 <container htmlTag="div" htmlClass="header-left-col" name="header-left-col"/>
             </block>
+
+            <block name="footer-bottom-line" template="Magento_Theme::footer/bottom-line.phtml" after="-">
+                <block class="Magento\Cms\Block\Block" name="footer-payment-methods" as="payments">
+                    <arguments>
+                        <argument name="block_id" xsi:type="string">footer-payment-methods</argument>
+                    </arguments>
+                </block>
+            </block>
+
         </referenceContainer>
 
         <referenceContainer name="footer">
@@ -83,16 +94,7 @@
                     </arguments>
                 </block>
             </block>
-
-            <!--<container name="container-wrapper" htmlTag="div" htmlClass="footer-payment-methods">-->
-                <!--<block class="Magento\Cms\Block\Block" name="footer-payment-methods">-->
-                    <!--<arguments>-->
-                        <!--<argument name="block_id" xsi:type="string">footer-payment-methods</argument>-->
-                    <!--</arguments>-->
-                <!--</block>-->
-            <!--</container>-->
         </referenceContainer>
-
     </body>
 </page>
 
