--- a/app/design/frontend/Project/Default/Magento_Theme/templates/html/header/header-sticky.phtml
+++ b/app/design/frontend/Project/Default/Magento_Theme/templates/html/header/header-sticky.phtml
@@ -1,4 +1,12 @@
+<?php
+/**
+ * @var \Magento\Theme\Block\Html\Header\Logo $block
+ */
+?>
+
 <div class="header-main"
+     data-action="header-sticky"
      data-mage-init='{"js/header-sticky": {}}'>
     <?php echo $block->getChildHtml() ?>
 </div>
+<div class="header-sticky-placeholder"></div>
