--- a/app/design/frontend/Project/Default/web/css/source/extend/header/_header-sticky.less
+++ b/app/design/frontend/Project/Default/web/css/source/extend/header/_header-sticky.less
@@ -81,6 +81,14 @@
            padding: 0;
        }
    }
+
+    .page-wrapper {
+        .header-sticky {
+            .panel.wrapper {
+                margin: 0;
+            }
+        }
+    }
 }
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__l) {
     .header-sticky {
@@ -91,10 +99,6 @@
             display: flex;
             align-items: center;
             margin-bottom: 0;
-        }
-
-        .panel.wrapper {
-            margin: 0;
         }
     }
 }
